# labelling_task

./: README.md  label.sh  pyproject.toml
src/labelling_task/: errors.py  main.py
src/labelling_task/allocation/: allocation_strategies.py  allocation_strategy.py  errors.py  strategy_factory.py
src/labelling_task/auth/: dependencies.py  jwt.py  models.py  security.py
src/labelling_task/configs/: logging_config.py  settings.py
src/labelling_task/domain/entities/: allocation.py  task.py
src/labelling_task/repositories/: allocation_repository.py  mongo.py  redis_client.py  task_repository.py
src/labelling_task/routers/: health_router.py  task_router.py
src/labelling_task/services/: allocation_service.py  task_service.py  zip_processing_service.py
src/labelling_task/utils/: logging.py  response.py  time_utils.py
src/labelling_task/webclient/: OAuth2HttpClient.py  OAuth2TokenProvider.py
tests/unit/: test_jwt_header.py  test_query_building.py
